[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apls"
version = "0.1.0"
description = "CosmiQ Works APLS Metric Implementation"
readme = "README.md"
license = {name = "BSD License"}
authors = [
    { name="CosmiQ Works" }
]

requires-python = ">=3.6,<3.7"

# Dependencies from both setup.py and environment.yml
dependencies = [
    "matplotlib>=3.0.0",
    "shapely==1.6.4",
    "fiona==1.8.6",
    "pandas==0.24.2",
    "geopandas==0.5.0",
    "opencv-python==3.4.4",
    "numpy==1.16.3",
    "tqdm>=4.28.1",
    "gdal==2.4.0",
    "rtree==0.8.3",
    "networkx==2.3",
    "rasterio==1.0.22",
    "scipy==1.2.1",
    "scikit-image==0.15.0",
    "affine==2.2.2",
    "utm>=0.4.0"
]

[project.optional-dependencies]
test = [
    "mock",
    "pytest",
    "pytest-cov",
    "codecov"
]

